--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,21 @@
 [metadata]
 name = baeshade
+version = 0.0.1
+author = baesky
+description = draw something in your terminal
+long_description = file: README.md
+license = MIT
+readme = README.md
 
 [options]
 package_dir=
     =.
 packages = find:
 zip_safe = False
-python_requires = >= 3
+python_requires = >= 3.8
 [options.packages.find]
 where = .
 exclude =
     tests*
+    examples*
     .gitignore
