--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = baeshade
-version = 0.0.1
+version = 0.0.3
 author = baesky
 description = draw something in your terminal
-long_description = file: README.md
+long_description = file: README.srt
 license = MIT
 readme = README.md
 
@@ -13,6 +13,7 @@ package_dir=
 packages = find:
 zip_safe = False
 python_requires = >= 3.8
+
 [options.packages.find]
 where = .
 exclude =
